--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
     </section>
   </main>
   <footer>
-    <ion-button aria-label="Favorite">
-      <ion-icon name="logo-facebook"></ion-icon>
-      <ion-icon name="logo-twitter"></ion-icon>
-      <ion-icon name="logo-instagram"></ion-icon>
+    <ion-button aria-label="logo facebook">
+      <ion-icon name="logo-facebook" aria-hidden="true"></ion-icon>
     </ion-button>
+    <ion-button aria-label="logo twitter">
+      <ion-icon name="logo-twitter" aria-hidden="true"></ion-icon>
+    </ion-button>
+    <ion-button aria-label="logo instagram">
+    </ion-button>
+      <ion-icon name="logo-instagram" aria-hidden="true"></ion-icon>
   </footer>
   <aside>
     <p class="attribution">
